--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      min-height: 420px;
-      height: 100%
+      min-height: 100vh;
+      height: 100vh;
     }
 
     .first-loading-wrp > h1 {
