--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <title><%= webpackConfig.name %></title>
   <script src="//at.alicdn.com/t/font_2242095_9a8mioh1pji.js"></script>
   <style>
+    body {
+      margin: 0;
+    }
+
     .first-loading-wrp {
       display: flex;
       justify-content: center;
