--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     }
   </style>
 </head>
+<!--在 iOS 上点击组件时，无法触发点击反馈效果？-->
+<!--https://stackoverflow.com/questions/3885018/active-pseudo-class-doesnt-work-in-mobile-safari/33681490#33681490-->
 <body ontouchstart>
 <div id="app">
   <div class="first-loading-wrp">
